@@ -579,7 +579,7 @@ function menu_rebuild() {
  */
 function theme_menu_tree($pid = 1) {
   if ($tree = menu_tree($pid)) {
-    return "\n<ul>\n". $tree ."\n</ul>\n";
+    return "\n<ul class=\"menu\">\n". $tree ."\n</ul>\n";
   }
 }
 
